README content and update bower package name

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "dirty",
-  "version": "0.1.0",
+  "name": "jquery.dirty",
+  "version": "0.2.0",
   "homepage": "https://github.com/simontaite/jquery.dirty",
   "authors": [
     "Simon Taite <simontaite1@gmail.com>"
