Fix npm audit warnings

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "test": "node-qunit-phantomjs test/test.html"
   },
   "repository": {
@@ -33,7 +34,15 @@
   "homepage": "https://simontaite.github.io/jquery.dirty/",
   "devDependencies": {
     "@types/jquery": "^3.3.4",
+    "braces": "^3.0.2",
+    "jquery": "^3.5.0",
+    "kind-of": ">=6.0.3",
+    "minimist": "^1.2.5",
     "node-qunit-phantomjs": "^2.0.0",
     "qunitjs": "^2.4.1"
+  },
+  "resolutions": {
+    "minimist": "^1.2.5",
+    "braces": "^3.0.2"
   }
 }
