--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "test": "karma start"
   },
   "repository": {
@@ -32,15 +33,37 @@
   },
   "homepage": "https://simontaite.github.io/jquery.dirty/",
   "devDependencies": {
-    "jquery": "^3.3.1",
-    "karma": "^3.0.0",
+    "@types/jquery": "^3.3.34",
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.11",
+    "docsify-cli": "^4.4.0",
+    "jquery": "^3.5.0",
+    "karma": "^5.0.1",
+    "karma-chai": "^0.1.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage": "^2.0.2",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-qunit": "^2.1.0",
+    "karma-sinon": "^1.0.5",
+    "karma-webpack": "^4.0.2",
+    "mocha": "^7.1.1",
     "node-qunit-phantomjs": "^2.0.0",
+    "nyc": "^15.0.1",
     "phantomjs-polyfill-find": "github:ptim/phantomjs-polyfill-find",
-    "qunit": "^2.6.1"
+    "phantomjs-prebuilt": "^2.1.16",
+    "qunit": "^2.9.3",
+    "sinon": "^9.0.2",
+    "standard": "^14.3.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   },
   "peerDependencies": {
     "jquery": ">= 1.11.0 < 4"
+  },
+  "resolutions": {
+    "minimist": "^1.2.5",
+    "braces": "^3.0.2"
   }
 }
