--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery.dirty",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "description": "A jQuery plugin for detecting if a form has been modified",
   "main": "dist/jquery.dirty.js",
   "directories": {
@@ -38,7 +38,7 @@
     "kind-of": "6.0.3",
     "minimist": "1.2.6",
     "node-qunit-phantomjs": "2.1.1",
-    "qunitjs": "2.4.1"
+    "qunitjs": "^2.0.1"
   },
   "resolutions": {
     "minimist": "1.2.6",
